--- a/src/app/components/dash-board-screen/dash-board-screen.component.css
+++ b/src/app/components/dash-board-screen/dash-board-screen.component.css
@@ -1,3 +1,14 @@
 #dash{
 text-align: center;
 }
+
+#dashes{
+    display: block;
+    width: 100%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+      }
